# AbstractVM

./: AbstractVM.cpp  AbstractVM.h  CMakeLists.txt  Instruction.cpp  Makefile  Operand.cpp  Operand.h  OperandFactory.cpp  README.md  consts.h  main.cpp  tests.cpp
execution/: IOperand.h  Instruction.cpp  Instruction.h  Operand.h  OperandFactory.cpp  OperandFactory.h  exceptions.cpp  exceptions.h
input/: CinReader.cpp  CinReader.h  FileReader.cpp  FileReader.h  IInputReader.h
parsing/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h
tests/: add_test  math_ops_test
